--- a/ArsaRExCH/Components/MyComponents/PropComponentss/Myc.razor
+++ b/ArsaRExCH/Components/MyComponents/PropComponentss/Myc.razor
@@ -128,6 +128,42 @@
                                              @bind-Value="propTrade.StopLoss" />
                             </div>
                         }
+                        @if (selectedBuySel == "Buy" && selectedTradeType == "Order")
+                        {
+                            <!-- Stop Loss Field -->
+                            <div style="flex: 1; width: 25%;">
+                                <label for="stopLoss">OrderP</label>
+                                <InputNumber id="stopLoss"
+                                             class="form-control"
+                                             @bind-Value="propTrade.OrderPriceOpened" />
+
+                            </div>
+                            <!-- Amount Field -->
+                            <div style="flex: 1; width: 25%;">
+                                <label for="symbolI">Amount</label>
+                                <InputNumber id="symbolI"
+                                             class="form-control"
+                                             @bind-Value="propTrade.AmountForOrder" />
+                            </div>
+
+                            <!-- Take Profit Field -->
+                            <div style="flex: 1; width: 25%;">
+                                <label for="takeProfit">Take Profit</label>
+                                <InputNumber id="takeProfit"
+                                             class="form-control"
+                                             @bind-Value="propTrade.TakeProfit" />
+                            </div>
+
+                            <!-- Stop Loss Field -->
+                            <div style="flex: 1; width: 25%;">
+                                <label for="stopLoss">Stop Loss</label>
+                                <InputNumber id="stopLoss"
+                                             class="form-control"
+                                             @bind-Value="propTrade.StopLoss" />
+
+                            </div>
+
+                        }
                     </div>
                 </div>
 
@@ -161,11 +197,12 @@
                         <th>Amount </th>
                         <th>Lev</th>
                         <th>Liquidation</th>
-                        <th>Opened Date</th>
+                        <th>Date</th>
                         <th>Type</th>
-                        <th> Margin Size</th>
+                        <th>Margin Size</th>
                         <th>Profit</th>
-                      
+                        <th>Status</th>
+                        <th>Type</th>
                         <th>Action</th>
 
                     </tr>
@@ -174,28 +211,31 @@
                     @foreach (var trade in OrderTradeList)
                     {
                         <tr>
-                            <td style="width:12%">@trade.OrderPriceOpened.ToString("C2", System.Globalization.CultureInfo.GetCultureInfo("en-US"))</td>
+                            <td style="width:8%">@trade.OrderPriceOpened.ToString("C2", System.Globalization.CultureInfo.GetCultureInfo("en-US"))</td>
                             <td style="width:6%">@(trade.StopLoss?.ToString("C2", System.Globalization.CultureInfo.GetCultureInfo("en-US")) ?? "N/A")</td>
                             <td style="width:6%">@(trade.TakeProfit?.ToString("C2", System.Globalization.CultureInfo.GetCultureInfo("en-US")) ?? "N/A")</td>
 
                             <td style="width:6%">@trade.AmountForOrder.ToString("C2", System.Globalization.CultureInfo.GetCultureInfo("en-US"))</td>
-                            <td style="width:8%">X @trade.Leverage</td>
+                            <td style="width:4%">X @trade.Leverage</td>
                             <td style="width:8%">@trade.LiquidationPrice.ToString("0.###")</td>
-                            <td>@trade.TradeOpened.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                            <td style="width:8%">@trade.TradeOpened.ToString("yyyy-MM-dd HH:mm:ss")</td>
                             <td style="width:6%; background-color:@(trade.orderTypeProp == OrderTypeProp.Buy ? "lightgreen" : "red")">
                                 @trade.orderTypeProp
                             </td>
 
-                            <td>@((trade.Leverage * trade.AmountForOrder).ToString("C2", System.Globalization.CultureInfo.GetCultureInfo("en-US"))) </td>
+                            <td style="width:8%">@((trade.Leverage * trade.AmountForOrder).ToString("C2", System.Globalization.CultureInfo.GetCultureInfo("en-US"))) </td>
 
-                            <td>
+                            <td style="width:8%">
+                                
                                 @{
                                     var profitLoss = CalculateProfitLossInDollar(
                                     trade.OrderPriceOpened,
                                     decimal.TryParse(btcPriceVariable, out var parsedPrice) ? parsedPrice : 0m,
                                     trade.AmountForOrder,
                                     trade.Leverage,
-                                    trade.orderTypeProp
+                                    trade.orderTypeProp,
+                                    trade.MarketType,
+                                    trade.Status
                                     );
                                     var backgroundColor = profitLoss >= 0 ? "green" : "red";
                                 }
@@ -203,6 +243,10 @@
                                     @profitLoss.ToString("0.###")
                                 </span>
                             </td>
+                            <td style="width:2%"> @trade.Status</td>
+
+                            <td style="width:5%">@trade.MarketType</td>
+
                             <td>
                                 <button @onclick="() => CloseMarketOrder(trade.PropTradeId)"
                                         style="background-color: yellow; color: black; border: none; padding: 8px 16px; cursor: pointer;"
@@ -268,10 +312,10 @@
                     AmountForOrder = propTrade.AmountForOrder, // Example order amount
                     Status = OrderStatus.Open, // Initial status as Open
                     ProfitInCase = 0,
-                    MarketType=MarketType.Market,
+                    MarketType = MarketType.Market,
                     FeeInCase = 0,
                     orderTypeProp = OrderTypeProp.Buy,
-                    LiquidationPrice = CalculateLiquidationPrice( btcDecimal,Level),
+                    LiquidationPrice = CalculateLiquidationPrice(btcDecimal, Level),
                     TakeProfit = propTrade.TakeProfit,
                     StopLoss = propTrade.StopLoss,
                     // Set the PropUserId if necessary
@@ -313,7 +357,7 @@
                     AmountForOrder = propTrade.AmountForOrder, // Example order amount
                     Status = OrderStatus.Open, // Initial status as Open
                     ProfitInCase = 0,
-                    MarketType=MarketType.Market,
+                    MarketType = MarketType.Market,
                     FeeInCase = 0,
                     orderTypeProp = OrderTypeProp.Sell,
                     LiquidationPrice = CalculateShortLiquidationPriceShortMarket(btcDecimal, Level),
@@ -341,6 +385,51 @@
             OrderTradeList = await ListOfOpenTrades();
             propUser = await GetPropUser(user2);
 
+        }
+        //TODO
+        if (selectedTradeType == "Order" && selectedBuySel == "Buy")
+        {
+            if (propTrade.AmountForOrder <= 0)
+            {
+                ErrorMessage = "amount smaller then zero";
+                return;
+            }
+
+            var newPropTrade = new PropTrade
+                {
+                    TradeOpened = DateTime.Now,
+                    OrderPriceOpened = propTrade.OrderPriceOpened,
+                    Leverage = Level, // Example leverage value
+                    AmountForOrder = propTrade.AmountForOrder, // Example order amount
+                    Status = OrderStatus.Pending, // Initial status as Open
+                    ProfitInCase = 0,
+                    MarketType = MarketType.Order,
+                    FeeInCase = 0,
+                    orderTypeProp = OrderTypeProp.Buy,
+                    LiquidationPrice = 0,
+                    TakeProfit = propTrade.TakeProfit,
+                    StopLoss = propTrade.StopLoss,
+                    // Set the PropUserId if necessary
+                    PropUserId = propUser.PropUserId // Assuming propUser is defined elsewhere
+                };
+
+            // Use the context to add and save the new propTrade instance
+            var context = dbContextFactory.CreateDbContext();
+
+            var myT = await context.propUsers.Where(c => c.ApplicationUserId == user2)
+              .FirstOrDefaultAsync();
+            if (myT.Balance < propTrade.AmountForOrder)
+            {
+                ErrorMessage = "Not Allow Balance Greater";
+                return;
+            }
+            myT.Balance -= propTrade.AmountForOrder;
+
+
+            await context.propTrdaes.AddAsync(newPropTrade);
+            await context.SaveChangesAsync();
+            OrderTradeList = await ListOfOpenTrades();
+            propUser = await GetPropUser(user2);
         }
     }
 
@@ -451,7 +540,7 @@
 
         // Log the query execution to check if it's returning any results
         var myTrades = await context.propTrdaes
-            .Where(c => c.PropUserId == userIdprop && c.Status == OrderStatus.Open)
+    .Where(c => c.PropUserId == userIdprop && (c.Status == OrderStatus.Open || c.Status == OrderStatus.Pending))
             .ToListAsync();
 
         // Log the results to see what's coming back
@@ -461,8 +550,12 @@
         return myTrades;
     }
 
-    private decimal CalculateProfitLossInDollar(decimal orderPrice, decimal currentPrice, decimal amount, int leverag,OrderTypeProp ordertype)
+    private decimal CalculateProfitLossInDollar(decimal orderPrice, decimal currentPrice, decimal amount, int leverag, OrderTypeProp ordertype, MarketType marketType,OrderStatus orderStatus)
     {
+        if (orderStatus == OrderStatus.Pending)
+        {
+            return 0.0m;
+        }
 
 
         // Calculate the effective Bitcoin amount held in this margin position
@@ -471,7 +564,7 @@
         // Calculate the unleveraged profit or loss based on the position type
         decimal unleveragedProfitLoss = 0m;
         decimal leveragedProfitLoss = 0m;
-        if (ordertype == OrderTypeProp.Buy)
+        if (ordertype == OrderTypeProp.Buy && marketType == MarketType.Market)
         {
             // For a long position (buy)
             if (currentPrice >= orderPrice)
@@ -480,7 +573,7 @@
                 //
                 leveragedProfitLoss = (currentPrice - orderPrice) * effectiveBitcoin;
             }
-           
+
         }
         else
         {
@@ -489,7 +582,7 @@
             // Apply leverage
             leveragedProfitLoss = unleveragedProfitLoss;
         }
-       
+
         // Return the profit or loss in the same currency as the asset (e.g., USD)
         return leveragedProfitLoss;
     }
@@ -520,7 +613,7 @@
                 continue; // Skip to the next item if StopLoss is 0
             }
 
-            if (x.orderTypeProp == OrderTypeProp.Buy&&x.MarketType==MarketType.Market)
+            if (x.orderTypeProp == OrderTypeProp.Buy && x.MarketType == MarketType.Market)
             {
                 // Stop-loss activated if the price has hit or dropped below StopLoss
                 if (btcDecimal <= x.StopLoss)
@@ -529,7 +622,8 @@
                         x.OrderPriceOpened,
                         btcDecimal,
                         x.AmountForOrder,
-                        x.Leverage,x.orderTypeProp),
+                        x.Leverage, x.orderTypeProp, x.MarketType, x.Status
+    ),
                 1
                     );
 
@@ -549,73 +643,7 @@
                         x.OrderPriceOpened,
                         btcDecimal,
                         x.AmountForOrder,
-                        x.Leverage, x.orderTypeProp),
-                1
-                    );
-
-                    x.OrderPriceClosed = btcDecimal;
-                    x.Status = OrderStatus.TakeProfit;
-                    x.TradeClosedDate = DateTime.Now;
-
-                    // Corrected addition to balance
-                    EditUserX.Balance += (x.AmountForOrder + Math.Abs(pnl));
-
-                    await context.SaveChangesAsync();
-                    OrderTradeList = await ListOfOpenTrades();
-                    propUser = await GetPropUser(user2);
-
-                }
-                if(x.StopLoss==0 || x.TakeProfit == 0)
-                {
-                    var liquidationPriceMaxRange = x.AmountForOrder;
-                    var pnl = Math.Round(CalculateProfitLossInDollar(
-                       x.OrderPriceOpened,
-                       btcDecimal,
-                       x.AmountForOrder,
-                       x.Leverage,x.orderTypeProp),
-               1
-                   );
-                    decimal liquidationPrice = x.OrderPriceOpened * (1 - 1 / Level);
-                    //liquidation max range is for example 50
-                    //if pnl is -50 trade liquidated 
-                    if (pnl <= -liquidationPriceMaxRange)
-                    {
-                        x.OrderPriceClosed = btcDecimal;
-                        x.Status = OrderStatus.Liquidated;
-                        await context.SaveChangesAsync();
-                    }
-                }
-            }
-            if (x.orderTypeProp == OrderTypeProp.Sell && x.MarketType == MarketType.Market)
-            {
-                // Stop-loss activated if the price has hit or dropped below StopLoss
-                if (btcDecimal >= x.StopLoss)
-                {
-                    var pnl = Math.Round(CalculateProfitLossInDollar(
-                        x.OrderPriceOpened,
-                        btcDecimal,
-                        x.AmountForOrder,
-                        x.Leverage, x.orderTypeProp),
-                1
-                    );
-
-                    x.OrderPriceClosed = btcDecimal;
-                    x.Status = OrderStatus.StopLoss;
-                    x.TradeClosedDate = DateTime.Now;
-
-                    // Corrected addition to balance
-                    EditUserX.Balance += (x.AmountForOrder - Math.Abs(pnl));
-
-                    await context.SaveChangesAsync();
-                    OrderTradeList = await ListOfOpenTrades();
-                }
-                if (btcDecimal <= x.TakeProfit)
-                {
-                    var pnl = Math.Round(CalculateProfitLossInDollar(
-                        x.OrderPriceOpened,
-                        btcDecimal,
-                        x.AmountForOrder,
-                        x.Leverage, x.orderTypeProp),
+                        x.Leverage, x.orderTypeProp, x.MarketType,x.Status),
                 1
                     );
 
@@ -638,7 +666,73 @@
                        x.OrderPriceOpened,
                        btcDecimal,
                        x.AmountForOrder,
-                       x.Leverage, x.orderTypeProp),
+                       x.Leverage, x.orderTypeProp, x.MarketType,x.Status),
+               1
+                   );
+                    decimal liquidationPrice = x.OrderPriceOpened * (1 - 1 / Level);
+                    //liquidation max range is for example 50
+                    //if pnl is -50 trade liquidated
+                    if (pnl <= -liquidationPriceMaxRange)
+                    {
+                        x.OrderPriceClosed = btcDecimal;
+                        x.Status = OrderStatus.Liquidated;
+                        await context.SaveChangesAsync();
+                    }
+                }
+            }
+            if (x.orderTypeProp == OrderTypeProp.Sell && x.MarketType == MarketType.Market)
+            {
+                // Stop-loss activated if the price has hit or dropped below StopLoss
+                if (btcDecimal >= x.StopLoss)
+                {
+                    var pnl = Math.Round(CalculateProfitLossInDollar(
+                        x.OrderPriceOpened,
+                        btcDecimal,
+                        x.AmountForOrder,
+                        x.Leverage, x.orderTypeProp, x.MarketType,x.Status),
+                1
+                    );
+
+                    x.OrderPriceClosed = btcDecimal;
+                    x.Status = OrderStatus.StopLoss;
+                    x.TradeClosedDate = DateTime.Now;
+
+                    // Corrected addition to balance
+                    EditUserX.Balance += (x.AmountForOrder - Math.Abs(pnl));
+
+                    await context.SaveChangesAsync();
+                    OrderTradeList = await ListOfOpenTrades();
+                }
+                if (btcDecimal <= x.TakeProfit)
+                {
+                    var pnl = Math.Round(CalculateProfitLossInDollar(
+                        x.OrderPriceOpened,
+                        btcDecimal,
+                        x.AmountForOrder,
+                        x.Leverage, x.orderTypeProp, x.MarketType,x.Status),
+                1
+                    );
+
+                    x.OrderPriceClosed = btcDecimal;
+                    x.Status = OrderStatus.TakeProfit;
+                    x.TradeClosedDate = DateTime.Now;
+
+                    // Corrected addition to balance
+                    EditUserX.Balance += (x.AmountForOrder + Math.Abs(pnl));
+
+                    await context.SaveChangesAsync();
+                    OrderTradeList = await ListOfOpenTrades();
+                    propUser = await GetPropUser(user2);
+
+                }
+                if (x.StopLoss == 0 || x.TakeProfit == 0)
+                {
+                    var liquidationPriceMaxRange = x.AmountForOrder;
+                    var pnl = Math.Round(CalculateProfitLossInDollar(
+                       x.OrderPriceOpened,
+                       btcDecimal,
+                       x.AmountForOrder,
+                       x.Leverage, x.orderTypeProp, x.MarketType,x.Status),
                1
                    );
                     decimal liquidationPrice = x.OrderPriceOpened * (1 - 1 / Level);
@@ -663,7 +757,7 @@
 
         var propuserI = await context.propUsers.
                      Where(c => c.PropUserId == userIdprop).FirstOrDefaultAsync();
-                     //make this button dynamic for all orders TODO
+        //make this button dynamic for all orders TODO
         if (btcDecimal > Dataget.OrderPriceOpened)
         {
             var pnl = Math.Round(
@@ -672,7 +766,9 @@
                     btcDecimal,
                     Dataget.AmountForOrder,
                     Dataget.Leverage,
-                    Dataget.orderTypeProp
+                    Dataget.orderTypeProp,
+                    Dataget.MarketType = MarketType.Market,
+                    Dataget.Status = OrderStatus.Pending
                 ),
                 1 // Rounding to one decimal place
             ); Dataget.ProfitInCase = pnl;
@@ -694,7 +790,7 @@
                     btcDecimal,
                     Dataget.AmountForOrder,
                     Dataget.Leverage,
-                    Dataget.orderTypeProp
+                    Dataget.orderTypeProp, Dataget.MarketType,Dataget.Status
                 ),
                 1 // Rounding to one decimal place
             ); Dataget.ProfitInCase = pnl;
